@@ -2,15 +2,8 @@ SCRIPTS_PATH = ../Scripts
 
 TO_LOWER = $(shell echo $(1) | tr [:upper:] [:lower:])
 
-ifneq (,$(findstring iphone,$(call TO_LOWER,$(notdir $(SDKROOT)))))
-	OVERRIDE_SDKROOT = default
-	OVERRIDE_ARCHS = default
-endif
-ifneq (,$(findstring watch,$(call TO_LOWER,$(notdir $(SDKROOT)))))
-	OVERRIDE_SDKROOT = default
-	OVERRIDE_ARCHS = default
-endif
-ifneq (,$(findstring tv,$(call TO_LOWER,$(notdir $(SDKROOT)))))
+# For non-macOS SDKs, build a macOS version of ImageDiff.
+ifeq (,$(findstring macos,$(call TO_LOWER,$(notdir $(SDKROOT)))))
 	OVERRIDE_SDKROOT = default
 	OVERRIDE_ARCHS = default
 endif
