@@ -1,3 +1,14 @@
+2021-07-29  Tim Horton  <timothy_horton@apple.com>
+
+        Simplify ImageDiff SDK logic
+        https://bugs.webkit.org/show_bug.cgi?id=228603
+        <rdar://problem/81281548>
+
+        Reviewed by Sam Weinig.
+
+        * ImageDiff/Makefile:
+        For any non-macOS SDK, build a macOS ImageDiff (because we use it on the host, not the target).
+
 2021-07-29  Jonathan Bedard  <jbedard@apple.com>
 
         [webkitscmpy] Return remote objects from remote() function
